--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ a:active, a:visited, a:focus {
   display: inline-block;
   font-size: 2rem;
   width: 50px;
-  height: 50px;
+  padding: 10px;
   border-radius: 50%;
   border: 1px solid transparent;
   left: 50%;
