third day - parallax2

--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ Modal window
   transition: opacity 0.3s 0s, visibility 0s 0.3s;
 }
 .modal-content {
-  background: #402f44 url(../img/modal-bg.jpg) no-repeat center center;
+  background: #402f44 url(img/modal-bg.jpg) no-repeat center center;
 }
 .cd-modal .modal-content {
   height: 100%;
