--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ a:active, a:visited, a:focus {
   top: 1rem;
 }
 .modal-btn {
-  display: block;
+  display: inline-block;
   color: #fff;
   border: 1px solid #fff;
   padding: 10px 20px;
